# okcourse

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml
contribute/: index.html
docs/: get-started.md  index.md  roadmap.md
docs/examples/: 503_error.html  cli.md  cli_async.md  index.md  streamlit.md
docs/reference/: index.md
docs/stylesheets/: extra.css
examples/: cli_example.py  cli_example_async.py  cost_estimator.py  index.html  streamlit_example.py  web_example.py
examples/cli-async/: index.html
examples/snippets/: async_openai_snippets.py
examples/streamlit-app/: index.html
get-started/: index.html
license/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/constants/: index.html
reference/generators/: index.html
reference/generators/base/: index.html
reference/generators/openai/: index.html
reference/models/: index.html
reference/prompt_library/: index.html
reference/utils/: index.html
reference/utils/audio_utils/: index.html
reference/utils/log_utils/: index.html
reference/utils/misc_utils/: index.html
reference/utils/text_utils/: index.html
roadmap/: index.html
scripts/: cost_estimator.py  gen_ref_docs.py
search/: search_index.json
src/okcourse/: __init__.py  constants.py  models.py  okcourse.py  prompt_library.py  settings.py  utils.py
src/okcourse/course_generators/: __init__.py  base.py  openai_generators.py
src/okcourse/generators/: __init__.py  base.py
tests/: test_string_utils.py
(+8 files in other folders)
