[project]
name = "okcourse"
version = "0.1.7"
description = "Generate audiobook-style courses in MP3 format with lectures on any topic using Python and the OpenAI API."
readme = "README.md"
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "openai>=1.57.2",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "questionary>=2.0.1",
    "streamlit>=1.41.0",
]
docs = [
    "black>=24.10.0",
    "griffe-pydantic>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings-python>=1.12.2",
]

[tool.uv.sources]
okcourse = { workspace = true }
